--- a/Src/Views/src/containers/Auth/Login.scss
+++ b/Src/Views/src/containers/Auth/Login.scss
@@ -8,8 +8,8 @@
 
 	.loginContainer {
 		width: 400px;
-		height: 100%;
-		margin: 0 auto;
+		height: 450px;
+		margin: auto;
 		background-color: white;
 		border-radius: 10px;
 
@@ -45,6 +45,48 @@
 
 			.forgot-password {
 				font-size: 12px;
+			}
+
+			.social-login {
+				display: flex;
+				justify-content: space-around;
+
+				i {
+					margin-top: 20px;
+					display: flex;
+				}
+				.google {
+					font-size: 30px;
+					background-color: #c32424;
+					border-radius: 50%;
+					height: 50px;
+					width: 50px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					color: white;
+				}
+
+				.facebook {
+					font-size: 30px;
+					background-color: #307aff;
+					border-radius: 50%;
+					height: 50px;
+					width: 50px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					color: white;
+					padding: 0 20px;
+				}
+
+				.github {
+					font-size: 50px;
+					height: 50px;
+					width: 50px;
+					justify-content: center;
+					align-items: center;
+				}
 			}
 		}
 	}
