--- a/Src/Views/src/containers/Auth/Login.scss
+++ b/Src/Views/src/containers/Auth/Login.scss
@@ -88,6 +88,17 @@
 					align-items: center;
 				}
 			}
+
+			.customer-input-password {
+				position: relative;
+
+				i {
+					position: absolute;
+					right: 5px;
+					top: 10px;
+					cursor: pointer;
+				}
+			}
 		}
 	}
 }
